--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <ul>
         <li><a href="/rendering/moving-boxes">Layout Fun</a></li>
+        <li><a href="/rendering/double-size-react">Double-size (React)</a></li>
         <li><a href="/rendering/stuck-up-top">Stuck Up Top</a></li>
         <li><a href="/rendering/paint-storming">Paint Storming</a></li>
     </ul>
